--- a/frontend/src/pages/home.module.css
+++ b/frontend/src/pages/home.module.css
@@ -1,5 +1,5 @@
 .homePage {
-  /* width: 1280px; */
+  /* width: 100vw; */
   height: 6046px;
   flex-grow: 0;
   background-color: #fff;
@@ -8,18 +8,23 @@
 
 .navbar{
   display: flex;
+  justify-content: space-between;
   height: 92.7px;
-  margin: 0 0 0.4px;
-  padding: 0 0 0 30px;
+  margin: 0 0 0px 10px;
+  /* padding: 0 0 0 30px; */
   background-color: #fff;
 }
 
+.navbtns {
+  display: flex;
+}
+
 .Logo {
-  margin: 25px 665px 18.5px 0;
+  /* margin: 25px 665px 18.5px 0; */
 }
 
 .homebtn {
-  margin: 0 0 0 665px;
+  /* margin: 0 0 0 665px; */
   padding: 33px 50px 32.7px 48px;
   background-color: #fff;
 }
@@ -110,6 +115,7 @@
 /* HERO BAR */
 .heroBox {
 position: absolute;
+width: 100vw;
 }
 
 
@@ -117,11 +123,11 @@ position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 1728px;
+  width: 100vw;
   position: absolute;
-  height: 513px;
+  /* height: 513px; */
   flex-grow: 0;
-  margin: 11.3px 0px 0px -350px;
+  /* margin: 11.3px 0px 0px -350px; */
   /* padding: 102px 421px 224px 100px; */
 }
 
@@ -130,15 +136,18 @@ position: relative;
 display: flex;
 justify-content: center;
 align-items: center;
+margin-top: 150px;
 }
 
 .tenantbtn {
-  /* width: 176px; */
+ display: flex;
+ justify-content: center;
+ align-items: center;
   height: 61px;
   flex-grow: 0;
   margin: 0 100px 0 0;
   padding: 13px 40px 14px;
-  border: solid 1px #fff;
+  /* border-bottom: solid 1px #fff; */
   background-color: rgba(217, 217, 217, 0);
 }
 
@@ -158,7 +167,9 @@ align-items: center;
 }
 
 .ownersbtn {
-  /* width: 176px; */
+  display: flex;
+ justify-content: center;
+ align-items: center;
   height: 61px;
   flex-grow: 0;
   margin: 0 0 0 100px;
@@ -181,18 +192,563 @@ align-items: center;
   color: #fff;
 }
 
-.searchbar {
+/* .searchbar {
   position: relative;
-  width: 0px;
-}
+} */
 
 .search {
   position: relative;
-  /* width: 885px; */
+  
   height: 65px;
   flex-grow: 0;
   margin: 61px 0 0;
-  padding: 11px 17px 12px 33px;
+  padding: 11px 550px 12px 33px;
+  box-sizing: border-box;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   background-color: #fff;
+}
+
+/* SITE INFO AND CALCULATOR */
+
+.infoCalc {
+  display: flex;
+  margin-top: 650px;
+}
+
+.siteInfo {
+  display: flex;
+  /* justify-content: center; */
+  width: 863px;
+  height: 1037px;
+  flex-grow: 0;
+  margin: 2px 0 0 1px;
+  padding: 80px 53px 0px 65px;
+  background-color: #fff;
+}
+/* ICONS FOR THE SITE INFORMATION */
+
+.siteInfoIcons {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: center; */
+}
+
+.checkBoard {
+  width: 87.9px;
+  height: 97.1px;
+  padding: 21.8px 21.3px 51.8px 20px;
+  /* background-color: #000; */
+}
+
+.magRedHouse {
+  width: 90px;
+  height: 90px;
+  flex-grow: 0;
+  margin: 0 48.8px 0 0;
+  padding: 21.8px 21.3px 51.8px 20px;
+  /* transform: rotate(180deg); */
+  /* background-color: #000; */
+}
+
+.houseRedHeart {
+  width: 101.9px;
+  height: 93.7px;
+  flex-grow: 0;
+  margin: 0 6.1px 0 0;
+  padding: 36px 30.6px 20.4px;
+  /* background-color: #000; */
+}
+
+.docuCheck {
+  width: 45px;
+  height: 52.5px;
+  flex-grow: 0;
+  margin: 35.8px 0 5.4px 0px;
+  padding: 24.1px 40px 35.8px 20px;
+  /* background-color: #000; */
+}
+
+.menCarry {
+  width: 90px;
+  height: 90px;
+  flex-grow: 0;
+  margin: 0 57px 0 0;
+  padding: 24.1px 40px 35.8px 20px;
+  /* background-color: #000; */
+}
+
+/* SITE INFO TEXT */
+
+.siteInfoText {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+}
+
+.onlineCalcInfo {
+  width: 561px;
+  height: 80px;
+  flex-grow: 0;
+  margin: 15px 0 16px 50px;
+  font-family: Inter;
+  font-size: 28px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.43;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+.searchHomes{
+  width: 547.3px;
+  height: 80px;
+  flex-grow: 0;
+  margin: 22px 0 22px 50px;
+  font-family: Inter;
+  font-size: 28px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.43;
+  letter-spacing: normal;
+  text-align: left;
+  text-decoration: none;
+  color: #e73336;
+}
+
+.searchHomes .searchRentals {
+  font-weight: normal;
+  color: #000;
+}
+
+.shareFavourites {
+  width: 561px;
+  height: 80px;
+  flex-grow: 0;
+  margin: 15px 0 0 50px;
+  font-family: Inter;
+  font-size: 28px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.43;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+.agreements {
+  width: 561px;
+  height: 80px;
+  flex-grow: 0;
+  margin: 8px 0 8px 50px;
+  font-family: Inter;
+  font-size: 28px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.43;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+
+/* RIGHT SIDE CALCULATOR */
+
+.calculator {
+  display: flex;
+  flex-direction: column;
+  width: 645px;
+  height: 913px;
+  padding: 26px 41px 34px 98px;
+  border-radius: 10px;
+  background-color: #b6d8f1;
+}
+
+.calcTitle {
+  width: 446px;
+  height: 40px;
+  flex-grow: 0;
+  margin: 0 59px 131px 1px;
+  font-family: Lexend;
+  font-size: 32px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #000;
+}
+
+.savingGoal {
+  width: 333px;
+  height: 27px;
+  margin: 50px 123px 0px 0;
+  font-family: Inter;
+  font-size: 22px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+
+
+
+.netIncome {
+  width: 318px;
+  height: 27px;
+  margin: 50px 138px 0px 0px;
+  font-family: Inter;
+  font-size: 22px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+.expenditure {
+  width: 341px;
+  height: 27px;
+  flex-grow: 0;
+  margin: 50px 115px 0px 0px;
+  font-family: Inter;
+  font-size: 22px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+.dollarSign {
+  flex-grow: 0;
+  font-family: Inter;
+  font-size: 40px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: lightslategrey;
+  margin-right: 50px;
+}
+
+
+.inputField {
+  width: 456px;
+  height: 63px;
+  flex-grow: 0;
+  /* margin: 19px 0 0; */
+  padding: 0px 10px 16px 38px;
+  border-radius: 50px;
+  background-color: #f3f4f6;
+  border: none;
+}
+.inputField:focus {
+outline: none;
+}
+
+.inputExpenditure {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 456px;
+  height: 63px;
+  flex-grow: 0;
+  margin: 19px 0 0;
+  padding: 16px 10px 16px 38px;
+  border-radius: 50px;
+  background-color: #f3f4f6;
+}
+
+
+.inputExpenditure::placeholder {
+  font-family: Inter;
+  font-size: 22px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+.calcSubTitle {
+  width: 365px;
+  height: 31px;
+  flex-grow: 0;
+  margin: 50px 0 47px;
+  font-family: Inter;
+  font-size: 26px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+.calculateCost {
+  display: flex;
+  
+}
+
+
+
+.calcCost {
+  flex-grow: 0;
+  font-family: Inter;
+  font-size: 40px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+  margin-right: 50px;
+}
+
+.costOutcome {
+border: none;
+background-color: #b6d8f1;
+}
+.costOutcome::selection {
+border: none;
+background-color: #b6d8f1;
+}
+
+.centerBtn {
+  display: flex;
+  justify-content: center;
+}
+
+.calculateBtn {
+  width: 449px;
+  height: 61px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  gap: 10px;
+  margin: 80px 57px 0 0;
+  padding: 15px 24px;
+  border-radius: 50px;
+  box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
+  background-color: #e73336;
+}
+
+/* OUR MISSION SECTION */
+
+.ourMission {
+  display: flex;
+  gap: 50px;
+  /* width: 1728px; */
+  height: 810px;
+  flex-grow: 0;
+  margin: 0px 0 0;
+  padding: 129px 57px 30px 65px;
+  background-color: #f9fafb;
+}
+
+.missionText {
+  display: flex;
+  flex-direction: column;
+}
+
+.happyTenants {
+  width: 534px;
+  height: 41px;
+  flex-grow: 0;
+  margin: 50PX 176px 48px 0.1px;
+  font-family: Inter;
+  font-size: 34px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+.aboutUs {
+  width: 710.1px;
+  height: 300px;
+  flex-grow: 0;
+  margin: 48px 0 26px;
+  font-family: Inter;
+  font-size: 26px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.54;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+.manyLocations {
+  width: 532px;
+  height: 40px;
+  flex-grow: 0;
+  margin: 0px 178px 0 0.1px;
+  font-family: Inter;
+  font-size: 26px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.54;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+.familyImg {
+  width: 829px;
+  height: 561px;
+  flex-grow: 0;
+  margin: 0 0 0 66.9px;
+}
+
+
+/* WORKING TOGETHER SECTION FOUR */
+
+.workingClosely {
+  display: flex;
+}
+
+.workingCloselyImg {
+  width: 542px;
+  height: 625px;
+  margin: 40px 83px 0 50px;
+}
+
+.workingCloselyText {
+  display: flex;
+  flex-direction: column;
+}
+
+.workingWithYou {
+  width: 399px;
+  height: 39px;
+  flex-grow: 0;
+  margin: 60px 584px 48px 0;
+  font-family: Inter;
+  font-size: 32px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+.atHome {
+  width: 983px;
+  /* height: 320px; */
+  flex-grow: 0;
+  margin: 30px 0;
+  font-family: Inter;
+  font-size: 26px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.54;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+.loveIt {
+  width: 951px;
+  height: 31px;
+  flex-grow: 0;
+  margin: 48px 32px 0 0;
+  font-family: Inter;
+  font-size: 26px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+ /* TENANT SUPPORT SECTION FIVE */
+
+ .support {
+  display: flex;
+  flex-direction: column;
+  width: 1724px;
+  height: 455px;
+  margin: 180px 4px 0 0;
+  padding: 78px 291px 44px 60px;
+  background-color: #f9fafb;
+}
+
+.tenantSupport {
+  width: 244px;
+  height: 39px;
+  flex-grow: 0;
+  margin: 0 138px 48px 0;
+  /* transform: rotate(-180deg); */
+  font-family: Inter;
+  font-size: 32px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+.onCall {
+  width: 1373px;
+  height: 200px;
+  flex-grow: 0;
+  margin: 48px 0 22px;
+  /* transform: rotate(-180deg); */
+  font-family: Inter;
+  font-size: 26px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.54;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+.onCall .seeYourself {
+  font-weight: bold;
+  
+}
+.seeBelow {
+  width: 50px;
+  height: 80px;
+  flex-grow: 0;
+  margin: 50px 17.3px 0 0;
+  /* border: solid 4px #000; */
 }
