--- a/frontend/src/components/Card/Card.module.css
+++ b/frontend/src/components/Card/Card.module.css
@@ -13,17 +13,22 @@
     display: flex;
     flex-direction: column;
     border-radius: 8px;
+    position: relative;
 }
 
 .image {
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
+    display: block;
 }
 
 .icon {
-    border: 1px solid black;
-    background-color: black;
-    max-width: 20%;
+    /* border: 1px solid black; */
+    /* background-color: black; */
+    max-width: 10%;
+    position:absolute;
+    top: 10px;
+    right: 10px;
 }
 
 .price {
