--- a/frontend/src/components/Card/Card.module.css
+++ b/frontend/src/components/Card/Card.module.css
@@ -1,12 +1,12 @@
 .card {
     display: flex;
     flex-direction: column;
+    align-items: center;
     max-width: 30%;
     border-radius: 8px;
-    /* border: 1px solid black; */
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-    margin-bottom: 15px ;
-    margin-left: 10px;
+    gap: 10px;
+    height: 50vh;
 }
 
 .imgDiv {
@@ -14,29 +14,58 @@
     flex-direction: column;
     border-radius: 8px;
     position: relative;
+    top:0;
+    max-height: 35vh;
+    width: 100%;
 }
 
 .image {
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     display: block;
+    top:0;
+    height: 100%;
 }
 
 .icon {
-    /* border: 1px solid black; */
-    /* background-color: black; */
-    max-width: 10%;
+    max-width: 8%;
     position:absolute;
-    top: 10px;
-    right: 10px;
+    top: 25px;
+    right: 25px;
 }
 
+.details {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items:stretch;
+    max-height: 15vh;
+    width: 90%;
+    padding: 0px;
+}
+
+.address {
+    text-align: left;
+    text-transform: capitalize;
+    font-size: large;
+}
 .price {
     font-weight: bolder;
+    text-align: left;
 }
+
+.horizontalLine {
+    width: 80%;
+    border: 1px solid lightgray;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+}
+
 .facilities {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    gap: 10%;
+    justify-content: space-between;
+    gap: 20%;
+    padding: 10px 0px;
 }
