--- a/frontend/src/components/FilterBar/FilterBar.module.css
+++ b/frontend/src/components/FilterBar/FilterBar.module.css
@@ -1,12 +1,12 @@
 .filterBar {
     display: flex;
     flex-direction: row;
-    border: 1px solid black;
     min-width: 90%;
     justify-content: space-between;
     margin-bottom: 25px;
     align-items: center;
     padding: 10px;
+    /* border: 1px solid black; */
 }
 
 .filterButtonDiv {
@@ -18,13 +18,15 @@
     justify-content: space-between;
     width: 130px;
     height: 100%;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border: 0.5px solid lightblue;
 }
 
 .filterButtonDiv img {
     height: 40px;
 }
 .filteredByListDiv {
-    border: 2px dashed brown;
+    /* border: 2px dashed brown; */
     display: flex;
     align-items: center;
     height: 40px;
@@ -36,18 +38,20 @@
     margin: 0;
     display: flex;
     justify-content: space-between;
-    border: 2px dotted blue;
     height: 100%;
     /* height: 100%; */
+    /* border: 2px dotted blue; */
 }
 
 .selectedList > li {
+    border: 0.5px solid lightblue;
     display: inline-block;
     margin-left: 20px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    padding:0 5px;
 }
 
 .selectedList >li >div > button {
-/* height: 40px; */
 height: 100%;
 border: none;
 text-transform: capitalize;
@@ -58,13 +62,12 @@ background-color: transparent;
     color: red;
     height: 100%;
     text-transform: capitalize;
-    /* font-weight: bolder; */
 }
 .listItemDiv {
     display: flex;
     flex-direction: row;
-    border: 2px solid saddlebrown;
     align-items: center;
+    /* border: 2px solid saddlebrown; */
 }
 .favourites {
     display: flex;
@@ -73,6 +76,7 @@ background-color: transparent;
 
 .xDiv {
     transform: rotate(-45deg);
-    font-size: 2rem;
+    font-size: 2.2rem;
+    cursor: pointer;
     
 }
