--- a/frontend/src/components/FilterBar/FilterBar.module.css
+++ b/frontend/src/components/FilterBar/FilterBar.module.css
@@ -6,6 +6,7 @@
     margin-bottom: 25px;
     align-items: center;
     padding: 10px;
+    margin-top: 90px;
     /* border: 1px solid black; */
 }
 
@@ -17,19 +18,22 @@
     align-items: center;
     justify-content: space-between;
     width: 130px;
-    height: 100%;
+    /* height: 100%; */
+    height: 40px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    border: 0.5px solid lightblue;
+    border: none;
 }
 
 .filterButtonDiv img {
-    height: 40px;
+    height: 32px;
 }
 .filteredByListDiv {
     /* border: 2px dashed brown; */
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     height: 40px;
+    width: 80%;
+
 }
 
 .selectedList {
@@ -44,7 +48,7 @@
 }
 
 .selectedList > li {
-    border: 0.5px solid lightblue;
+    /* border: 0.1re solid lightblue; */
     display: inline-block;
     margin-left: 20px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -72,6 +76,7 @@ background-color: transparent;
 .favourites {
     display: flex;
     font-weight: bolder;
+    align-items: center;
 }
 
 .xDiv {
@@ -79,4 +84,24 @@ background-color: transparent;
     font-size: 2.2rem;
     cursor: pointer;
     
+}
+
+
+.heartCounterDiv {
+    position: relative;
+    text-align: center;
+    color: snow;
+    height: 40px;
+    margin-right: 10px;
+    font-weight: bolder;
+}
+
+.heartCounterDiv > img {
+    height: 40px;
+}
+.counter {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
 }
