--- a/frontend/src/components/Testimonials/Testimonials.module.css
+++ b/frontend/src/components/Testimonials/Testimonials.module.css
@@ -2,7 +2,7 @@
 .testimonials {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  /* width: 100vw; */
   flex-grow: 0;
   margin: 200px 0 100px;
   padding: 128px 58px 122px;
