--- a/frontend/src/components/ListingsFooter/RentalsFooter.module.css
+++ b/frontend/src/components/ListingsFooter/RentalsFooter.module.css
@@ -17,11 +17,12 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items:flex-start;
+    align-items: flex-start;
     /* border: 1px solid black; */
 }
 
-.poweredByAnchor, .clickHereAnchor {
+.poweredByAnchor,
+.clickHereAnchor {
     text-decoration: none;
 }
 
