favourites useState stored in Rentals.js

--- a/frontend/src/components/Card/Card.module.css
+++ b/frontend/src/components/Card/Card.module.css
@@ -38,6 +38,14 @@
 .redIcon {
     display: none;
 }
+
+.displayIcon {
+    display: block;
+}
+.hideIcon {
+    display: none;
+}
+
 .details {
     display: flex;
     flex-direction: column;
