--- a/frontend/src/components/Card/Card.module.css
+++ b/frontend/src/components/Card/Card.module.css
@@ -14,7 +14,7 @@
     flex-direction: column;
     border-radius: 8px;
     position: relative;
-    top:0;
+    top: 0;
     max-height: 35vh;
     width: 100%;
 }
@@ -23,26 +23,48 @@
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     display: block;
-    top:0;
+    top: 0;
     height: 100%;
 }
 
-.icon, .redIcon {
+.icon,
+.redIcon {
     max-width: 8%;
-    position:absolute;
+    position: absolute;
     top: 25px;
     right: 25px;
     cursor: pointer;
+    border: 0.5px solid black;
 }
 
-.redIcon {
+/* .redIcon {
+    display: none;
+} */
+
+.displayIcon {
+    max-width: 8%;
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    cursor: pointer;
+    display: block;
+}
+
+.displayRedIcon {
+    max-width: 8%;
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    cursor: pointer;
+    display: block;
+}
+
+
+.hideIcon {
     display: none;
 }
 
-.displayIcon {
-    display: block;
-}
-.hideIcon {
+.hideRedIcon {
     display: none;
 }
 
@@ -50,7 +72,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    align-items:stretch;
+    align-items: stretch;
     max-height: 15vh;
     width: 90%;
     padding: 0px;
@@ -61,6 +83,7 @@
     text-transform: capitalize;
     font-size: large;
 }
+
 .price {
     font-weight: bolder;
     text-align: left;
